@@ -59,12 +59,15 @@ G4TrajectoriesModel::~G4TrajectoriesModel () {}
 void G4TrajectoriesModelDebugG4AttValues(const G4VTrajectory*);
 
 #include "G4VVisManager.hh"
+#ifdef G4MULTITHREADED
+#include "G4Threading.hh"
+#endif
 void G4TrajectoriesModel::DescribeYourselfTo (G4VGraphicsScene& sceneHandler)
 {
-#ifdef G4MULTITHREADED
-  G4MTRunManager* runManager = G4MTRunManager::GetMasterRunManager();
-#else
   G4RunManager* runManager = G4RunManager::GetRunManager();
+#ifdef G4MULTITHREADED
+  if(G4Threading::IsMultithreadedApplication())
+  { runManager = G4MTRunManager::GetMasterRunManager(); }
 #endif
   const G4Run* currentRun = runManager->GetCurrentRun();
   if (currentRun) {
